fix header image on mobile

--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -121,14 +121,9 @@
 
     .cs-picture {
       width: 100%;
-      max-width: calc(570 / 16 * 1rem);
+      // max-width: calc(570 / 16 * 1rem);
       /* 400px - 712px */
-      height: clamp(25rem, 95vw, 44.5rem);
-      /* 100px - 200px */
-      border-radius: 0 clamp(6.25rem, 17vw, 12.5rem) 0
-        clamp(6.25rem, 17vw, 12.5rem);
-      box-shadow: 0px 4px 60px rgba(0, 0, 0, 0.16);
-      /* clips the img tag corners */
+      height: clamp(20rem, 80vw, 44.5rem);
       overflow: hidden;
       display: block;
       position: relative;
@@ -139,8 +134,6 @@
         left: 0;
         height: 100%;
         width: 100%;
-        /* makes image act as a background image */
-        object-fit: cover;
         /* ensures the top of the images is at the top of the container, no heads getting cut off */
         object-position: top;
       }
